# grant-generator

./: .env  Cargo.toml  README.md  grants.json  run.sh
instruction-generator/: .env  Cargo.toml  grants.json
instruction-generator/src/: main.rs
proposal-creator/: Cargo.toml
proposal-creator/src/: main.rs
src/: main.rs
