[package]
name = "voter-stake-grant-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bs58 = "0.4.0"
borsh = "0.9.3"
serde = "1.0"
serde_json = "1.0"
anchor-lang = "0.24.2"
anchor-spl = { version = "0.24.2" }
solana-program = "1.9.5"
solana-sdk = "1.9.5"
solana-remote-wallet = "1.9.5"
spl-token = { version = "3.0.0", features = ["no-entrypoint"] }
voter-stake-registry = {git="https://github.com/blockworks-foundation/voter-stake-registry", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
dotenv = "0.15.0"
clap = { version = "3.2.22", features = ["cargo"] }
uriparse = "0.6.3"
spl-governance = { version = "2.2.1", features = ["no-entrypoint"] }