[package]
name = "proposal-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
serde = "1.0"
serde_json = "1.0"
borsh = "0.9.3"
bincode = "1.3.3"
solana-sdk = "1.9.5"
solana-remote-wallet = "1.9.5"
solana-client = "1.9.5"
spl-governance = { version = "2.2.1", features = ["no-entrypoint"] }
uriparse = "0.6.3"
clap = { version = "3.2.22", features = ["cargo"] }
dotenv = "0.15.0"
